--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,113 @@
-body {
-  background-color: black;
+@font-face {
+  font-family: "foglihtenno07regular";
+  src: url("foglihtenno07-webfont.eot");
+  src: url("foglihtenno07-webfont.eot?#iefix") format("embedded-opentype"), url("foglihtenno07-webfont.woff2") format("woff2"), url("foglihtenno07-webfont.woff") format("woff"), url("foglihtenno07-webfont.ttf") format("truetype"), url("foglihtenno07-webfont.svg#foglihtenno07regular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+html, body {
+  padding: 0;
+  margin: 0;
+}
+
+body, html {
+  background-color: #e6e6e6;
+}
+
+header {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Reem Kufi", sans-serif;
+}
+
+.logo_name {
+  height: 50px;
+  padding: 10px 0;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+}
+nav > ul {
+  display: flex;
+  flex-direction: row;
+}
+nav > ul > li {
+  list-style: none;
+}
+nav > ul > li > a {
+  color: #005740;
+  text-decoration: none;
+  padding: 8%;
+  border-radius: 45px;
+  margin: 0 10px;
+}
+nav > ul > li > a:hover {
+  color: #fff;
+  background-color: #424CFF;
+}
+nav > ul > li > ul > li {
+  list-style: none;
+}
+nav > ul > li > ul > li > a {
+  color: #005740;
+  text-decoration: none;
+  background-color: #E5FFF8;
+  padding: 10px;
+  border-radius: 45px;
+}
+nav > ul > li > ul > li > a:hover {
+  color: #fff;
+  background-color: #424CFF;
+}
+
+.cart {
+  height: 50px;
+  padding: 10px 0;
+}
+
+.search {
+  height: 50px;
+  border: 2px solid #424CFF;
+  border-radius: 45px;
+  margin: 10px;
+  display: flex;
+  align-items: center;
+}
+.search > input {
+  height: 30px;
+  background-color: transparent;
+  border: none;
+  padding: 10px;
+}
+.search > input:focus {
+  border-radius: 45px;
+}
+.search > button {
+  background-color: transparent;
+  border: none;
+}
+.search > button > img {
+  height: 30px;
+  padding: 10px;
+}
+
+.login_connect > a:first-child {
+  background-color: #424CFF;
+  color: #fff;
+  padding: 10px;
+  border-radius: 45px;
+  text-decoration: none;
+}
+.login_connect > a:last-child {
+  background-color: #CCCFFF;
+  color: #005740;
+  padding: 10px;
+  border-radius: 45px;
+  text-decoration: none;
 }/*# sourceMappingURL=style.css.map */
