--- a/style/layout/_navbar.scss
+++ b/style/layout/_navbar.scss
@@ -12,9 +12,13 @@ header {
     height: 70px;
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
     justify-content: space-between;
     align-items: center;
     font-family: 'Reem Kufi', sans-serif;
+    background-color: $grey;
+    position: fixed;
+    top: 0;
 }
 
 .logo_name {
@@ -80,6 +84,9 @@ nav {
     margin: 10px;
     display: flex;
     align-items: center;
+    min-width: 150px;
+    max-width: 275px;
+    width: auto;
 
     & > input {
         height: 30px;
